--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8" />
-        <title>Template</title>
+        <title>1010</title>
     </head>
     <body>
         <div id="root"></div>
